Second Test - Remote workflow

--- a/_posts/2015-10-10-Test.md
+++ b/_posts/2015-10-10-Test.md
@@ -3,8 +3,13 @@ layout: post
 title: Markdown/Jekyll Test
 ---
 
-##Seeing Whether Things Work Better If I Follow Directions
+##Test Two
 
-Didn't have any luck when I tried galloping on my own...but so far, this is working better.
+This is a second test for this workflow -- to see if I can edit the site locally.
+
+Things I want to use it for: 
+
+1. A collection of all my notes from Primer Basic, Primer Pro and Advanced Front End Web Tools.
+2. Possibly links to other sites/explorations?
 
 ***
